--- a/config/default/core.entity_form_display.node.nrcs_detail_page.default.yml
+++ b/config/default/core.entity_form_display.node.nrcs_detail_page.default.yml
@@ -15,6 +15,7 @@ dependencies:
     - node.type.nrcs_detail_page
   module:
     - content_moderation
+    - cshs
     - image
     - metatag
     - paragraphs
@@ -24,15 +25,9 @@ targetEntityType: node
 bundle: nrcs_detail_page
 mode: default
 content:
-  created:
-    type: datetime_timestamp
-    weight: 10
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_nrcs_detail_components:
     type: entity_reference_paragraphs
-    weight: 128
+    weight: 7
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -43,7 +38,7 @@ content:
     third_party_settings: {  }
     region: content
   field_nrcs_page_banner_image:
-    weight: 122
+    weight: 5
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -51,7 +46,7 @@ content:
     type: image_image
     region: content
   field_nrcs_page_heading:
-    weight: 123
+    weight: 6
     settings:
       size: 60
       placeholder: ''
@@ -59,31 +54,28 @@ content:
     type: string_textfield
     region: content
   field_nrcs_page_metatags:
-    weight: 121
+    weight: 9
     settings: {  }
     third_party_settings: {  }
     type: metatag_firehose
     region: content
   field_nrcs_page_path:
-    weight: 125
+    weight: 2
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      parent: 0
+      level_labels: ''
+      force_deepest: false
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: cshs
     region: content
   field_nrcs_page_site:
-    weight: 124
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    weight: 1
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: options_select
     region: content
   field_nrcs_page_title:
-    weight: 126
+    weight: 4
     settings:
       size: 60
       placeholder: ''
@@ -91,71 +83,50 @@ content:
     type: string_textfield
     region: content
   field_nrcs_page_url_component:
-    weight: 127
+    type: string_textfield
+    weight: 3
+    region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
-    region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 8
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 100
+    weight: 11
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 10
     region: content
     settings: {  }
-    third_party_settings: {  }
-  promote:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 15
-    region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 120
-    region: content
-    third_party_settings: {  }
-  sticky:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 16
+    weight: 12
     region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  translation:
-    weight: 10
-    region: content
-  uid:
-    type: entity_reference_autocomplete
-    weight: 5
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    region: content
-    third_party_settings: {  }
-hidden: {  }
+hidden:
+  created: true
+  promote: true
+  sticky: true
+  translation: true
+  uid: true
