--- a/config/default/core.entity_view_display.node.nrcs_detail_page.default.yml
+++ b/config/default/core.entity_view_display.node.nrcs_detail_page.default.yml
@@ -22,18 +22,23 @@ targetEntityType: node
 bundle: nrcs_detail_page
 mode: default
 content:
+  content_moderation_control:
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_nrcs_detail_components:
     type: entity_reference_revisions_entity_view
-    weight: 108
-    label: above
+    weight: 5
+    label: hidden
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
     region: content
   field_nrcs_page_banner_image:
-    weight: 102
-    label: above
+    weight: 3
+    label: hidden
     settings:
       image_style: ''
       image_link: ''
@@ -41,54 +46,31 @@ content:
     type: image
     region: content
   field_nrcs_page_heading:
-    weight: 103
-    label: above
+    weight: 4
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
   field_nrcs_page_metatags:
-    weight: 101
-    label: above
+    weight: 1
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: metatag_empty_formatter
     region: content
-  field_nrcs_page_path:
-    weight: 105
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_nrcs_page_site:
-    weight: 104
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_nrcs_page_title:
-    weight: 106
-    label: above
+    weight: 2
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
-    region: content
-  field_nrcs_page_url_component:
-    weight: 107
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  links:
-    weight: 100
     region: content
 hidden:
+  field_nrcs_page_path: true
+  field_nrcs_page_site: true
+  field_nrcs_page_url_component: true
   langcode: true
+  links: true
