--- a/config/default/core.entity_view_display.node.nrcs_home_page.default.yml
+++ b/config/default/core.entity_view_display.node.nrcs_home_page.default.yml
@@ -27,7 +27,7 @@ content:
   field_nrcs_home_components:
     type: entity_reference_revisions_entity_view
     weight: 5
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
