--- a/config/default/core.entity_view_display.node.nrcs_overview_page.default.yml
+++ b/config/default/core.entity_view_display.node.nrcs_overview_page.default.yml
@@ -26,6 +26,8 @@ content:
   content_moderation_control:
     weight: -20
     region: content
+    settings: {  }
+    third_party_settings: {  }
   field_nrcs_overview_components:
     type: entity_reference_revisions_entity_view
     weight: 5
