--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "cweagans/composer-patches": "^1.6",
         "drupal/adminimal_admin_toolbar": "^1.7",
         "drupal/adminimal_theme": "^1.3",
+        "drupal/cmis": "dev-8.x-2.x",
         "drupal/cshs": "^1.0@beta",
         "drupal/field_group": "^1.0",
         "drupal/group": "^1.0@RC",
@@ -77,7 +78,20 @@
         "patches": {
             "drupal/menu_token": {
                 "Call to a member function getType() on null when the NodeType condition plugin gets an empty context": "https://www.drupal.org/files/issues/menu_token-no_context_fix-2923651-3.patch"
+            },
+            "drupal/cmis": {
+                "Remove checkClient() and fix getContentStream() call": "patches/remove-check-client-fix-get-content-stream-2608214-23.patch"
             }
+        }
+    },
+    "repositories": {
+        "drupal": {
+            "type": "composer",
+            "url": "https://packages.drupal.org/8"
+        },
+        "cmis": {
+            "type": "vcs",
+            "url": "https://git.drupal.org/project/cmis.git"
         }
     }
 }
