NRCSD8-0000: Add CMIS module and settings.

--- a/config/default/core.entity_form_display.paragraph.nrcs_call_to_action.default.yml
+++ b/config/default/core.entity_form_display.paragraph.nrcs_call_to_action.default.yml
@@ -57,8 +57,12 @@ content:
     settings: {  }
     region: content
     third_party_settings: {  }
+  translation:
+    weight: 5
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   created: true
   status: true
-  translation: true
   uid: true
