--- a/config/default/editor.editor.basic_html.yml
+++ b/config/default/editor.editor.basic_html.yml
@@ -29,6 +29,7 @@ settings:
           items:
             - DrupalLink
             - DrupalUnlink
+            - CmisLink
         -
           name: Lists
           items:
