--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -7,6 +7,8 @@ module:
   block_content: 0
   breakpoint: 0
   ckeditor: 0
+  cmis: 0
+  cmis_ckeditor_link: 0
   color: 0
   comment: 0
   config: 0
