--- a/config/default/language.content_settings.paragraph.nrcs_accordion.yml
+++ b/config/default/language.content_settings.paragraph.nrcs_accordion.yml
@@ -8,11 +8,11 @@ dependencies:
     - content_translation
 third_party_settings:
   content_translation:
-    enabled: true
+    enabled: false
     bundle_settings:
       untranslatable_fields_hide: '0'
 id: paragraph.nrcs_accordion
 target_entity_type_id: paragraph
 target_bundle: nrcs_accordion
-default_langcode: site_default
+default_langcode: current_interface
 language_alterable: true
